[gd_scene load_steps=5 format=3 uid="uid://bhuwwjnnotsr1"]

[ext_resource type="Script" path="res://GDS/option_panel.gd" id="1_dwjtj"]
[ext_resource type="Texture2D" uid="uid://c4pfec6vgik56" path="res://Resources/Textures/TitleBox.png" id="3_r7p21"]
[ext_resource type="PackedScene" uid="uid://0d2wmeddwq42" path="res://Components/button.tscn" id="4_uo2hb"]
[ext_resource type="PackedScene" uid="uid://b1qhrl0lkybs" path="res://Components/path_button.tscn" id="5_b15or"]

[node name="OptionPanel" type="Node2D"]
script = ExtResource("1_dwjtj")

[node name="TitleBox" type="Sprite2D" parent="."]
position = Vector2(256.5, -46.5)
scale = Vector2(0.656824, 0.246)
texture = ExtResource("3_r7p21")

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = -155.0
offset_top = -108.0
offset_right = 166.0
offset_bottom = 46.0
mouse_filter = 2
current_tab = 0
tabs_position = 1

[node name="Active" type="TabBar" parent="TabContainer"]
layout_mode = 2
mouse_filter = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="ButtonStart" parent="TabContainer/Active" instance=ExtResource("4_uo2hb")]
position = Vector2(5, 13)

[node name="ButtonStop" parent="TabContainer/Active" instance=ExtResource("4_uo2hb")]
position = Vector2(100, 13)
Name = "[center]Stop[/center]"

[node name="Button" parent="TabContainer/Active" instance=ExtResource("5_b15or")]
position = Vector2(5, 69)

[node name="Analyze" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
tab_alignment = 1
metadata/_tab_index = 1

[node name="ButtonLoad" parent="TabContainer/Analyze" instance=ExtResource("4_uo2hb")]
position = Vector2(5, 13)
Name = "[center]Read[/center]"

[node name="Button" parent="TabContainer/Analyze" instance=ExtResource("5_b15or")]
position = Vector2(5, 69)

[connection signal="on_pressed" from="TabContainer/Active/ButtonStart" to="." method="_on_button_on_pressed"]
[connection signal="on_pressed" from="TabContainer/Active/ButtonStop" to="." method="_on_button_2_on_pressed"]
[connection signal="save" from="TabContainer/Active/Button" to="." method="_on_buttonSave_save"]
[connection signal="on_pressed" from="TabContainer/Analyze/ButtonLoad" to="." method="_on_button_load_on_pressed"]
[connection signal="save" from="TabContainer/Analyze/Button" to="." method="_on_buttonLoad_save"]
